# save-manager

./: .gitignore  Cargo.toml  Dioxus.toml  shell.nix  tailwind.css
api/: Cargo.toml
api/src/: auth.rs  lib.rs  save.rs  version.rs
api/src/db/: mod.rs
assets/: tailwind.css
src/: auth.rs  file_management.rs  main.rs  saves.rs  versions.rs
src/components/: dialog.rs  mod.rs  toast.rs
src/versions/: list.rs
