[package]
authors = ["Miitto <wpbickerton@gmail.com>"]
edition = "2024"
name = "save-manager"
version = "0.1.0"

[workspace]
members = ["api"]
resolver = "3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
anyhow = "1.0.102"
dioxus = "0.7.1"
log = "0.4.32"
serde = "1.0.228"
zip = { version = "8.6.0", default-features = false, features = [
  # "aes-crypto",
  # "bzip2",
  # "xz",
  "deflate",
  "deflate64",
  "lzma",
  "time",
  "zstd",
] }

[dependencies]
api = { path = "api" }
chrono = "0.4.45"
dioxus = { workspace = true, features = ["fullstack", "router"] }
dioxus-sdk-time = "0.7.0"
futures = "0.3.32"
gloo-timers = { version = "0.4.0", optional = true, features = ["futures"] }
js-sys = { version = "0.3.102", optional = true }
log.workspace = true
serde.workspace = true
tokio = { version = "1.39.3", features = ["time"], optional = true }
web-sys = { version = "0.3.102", optional = true }

[features]
default = ["desktop"]
desktop = ["api/desktop", "dep:tokio", "dioxus/desktop"]
server = ["api/server", "dioxus/server"]
web = ["dep:gloo-timers", "dep:js-sys", "dep:web-sys", "dioxus/web"]
