[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { workspace = true, features = ["fullstack"] }
serde.workspace = true
anyhow.workspace = true

# Server only
axum = { version = "0.8.9", optional = true }
sqlx = { version = "0.9.0", optional = true, features = [
  "macros",
  "migrate",
  "sqlite",
  "runtime-tokio",
] }
axum_session = { version = "0.20.1", optional = true }
axum_session_auth = { version = "0.20.0", optional = true }
axum_session_sqlx = { version = "0.10.0", optional = true, features = [
  "sqlite",
] }
tokio = { version = "1.52.3", optional = true, features = ["full"] }
http = { version = "1.4.2", optional = true }
tower = { version = "0.5.3", optional = true }
tower-http = { version = "0.6.11", optional = true, features = ["auth"] }
async-trait = { version = "0.1.89", optional = true }

[features]
desktop = []
server = [
  "dioxus/server",
  "dep:axum",
  "dep:sqlx",
  "dep:axum_session",
  "dep:axum_session_auth",
  "dep:axum_session_sqlx",
  "dep:tokio",
  "dep:http",
  "dep:tower",
  "dep:tower-http",
  "dep:async-trait",
]
