[package]
edition = "2024"
name = "api"
version = "0.1.0"

[dependencies]
anyhow.workspace = true
dioxus = { workspace = true, features = ["fullstack"] }
log.workspace = true
serde.workspace = true

# Server only
async-trait = { version = "0.1.89", optional = true }
axum = { version = "0.8.9", optional = true }
axum_session = { version = "0.20.1", optional = true }
axum_session_auth = { version = "0.20.0", optional = true }
axum_session_sqlx = { version = "0.10.0", optional = true, features = [
  "sqlite",
] }
bcrypt = { version = "0.19.2", optional = true }
http = { version = "1.4.2", optional = true }
sqlx = { version = "0.9.0", optional = true, features = [
  "macros",
  "migrate",
  "runtime-tokio",
  "sqlite",
] }
tokio = { version = "1.52.3", optional = true, features = ["full"] }
tower = { version = "0.5.3", optional = true }
tower-http = { version = "0.7", optional = true, features = ["auth", "cors"] }
zip.workspace = true
tokio-util = { version = "0.7.18", optional = true, features = ["io"] }

[features]
desktop = []
server = [
  "dep:async-trait",
  "dep:axum",
  "dep:axum_session",
  "dep:axum_session_auth",
  "dep:axum_session_sqlx",
  "dep:http",
  "dep:sqlx",
  "dep:tokio",
  "dep:tokio-util",
  "dep:tower",
  "dep:tower-http",
  "dioxus/server",
  "dep:bcrypt",
]
